--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           <p> <i class="fas fa-map-marked-alt"></i>berhampur, India-76008</p>
           <div class="share">
 
-              <a href="https:/https://www.linkedin.com/in/priyansu-behera-97ba651b7" class="fab fa-linkedin" target="_blank"></a>
+              <a href="https://https://www.linkedin.com/in/priyansu-behera-97ba651b7" class="fab fa-linkedin" target="_blank"></a>
               <a href="" class="fab fa-github" target="_blank"></a>
               <a href="mailto:bpriyansu4@gmail.com" class="fas fa-envelope" target="_blank"></a>
               <a href="https://mobile.twitter.com/PRIYANSUKUMARB1" class="fab fa-twitter" target="_blank"></a>
@@ -577,7 +577,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> priyansu behera</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/priyansu-behera-97ba651b7"> priyansu behera</a></h1>
 
 </section>
 <!-- footer section ends -->
