--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- navbar ends -->
 
 
-<!-- hero section starts -->
+<!-- Home section starts -->
 <section class="home" id="home">
     <div id="particles-js"></div>
 
@@ -54,11 +54,10 @@
     <div class="socials">
         <ul class="social-icons">
           <li><a class="linkedin" href="https://www.linkedin.com/in/priyansu-behera-97ba651b7" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" href="#" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" href="https://github.com/priyansuraja/" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" href="https://mobile.twitter.com/PRIYANSUKUMARB1" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <li><a class="telegram" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
-          <li><a class="instagram" href="#"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" href="#" target="_blank"><i class="fab fa-dev"></i></a></li>
+          <li><a class="instagram" href="https://www.instagram.com/priyansubehera/?hl=en"><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
     </div>
@@ -66,7 +65,7 @@
     <img draggable="false" class="tilt" src="./assests/images/hero.png" alt="">
 </div>
 </section>
-<!-- hero section ends -->
+<!-- Home section ends -->
 
 
 <!-- about section starts -->
@@ -79,18 +78,18 @@
         <img draggable="false" class="tilt" src="./assests/images/IMG-20210517-WA0003.jpg" alt="">
     </div>
     <div class="content">
-        <h3>I'm priyansu</h3>
+        <h3>I'm Priyansu Behera</h3>
         <span class="tag">Passionate Web and App Developer</span>
-        <p>Currently pursuing my first year engineering focused on information technology. I am very passionate about improving my coding skills & developing my own applications & softwares. Having some experience in web development. Interested in android. Loves to develop core Java & MySQL stuff.</p>
+        <p>Currently pursuing my first year engineering focused on Information Technology. I am very passionate about improving my coding skills & developing my own applications & softwares. Having some experience in web development. Interested in android. Loves to develop core Java & MySQL stuff.</p>
         
         <div class="box-container">
             <div class="box">
-              <p><span> age: </span> 18</p>
-              <p><span> phone : </span> +91 720-544-4938</p>
+              <p><span> Age: </span> 18</p>
+              <p><span> Phone : </span> +91 720-544-4938</p>
             </div>
             <div class="box">
               <p><span> email : </span> bpriyansu4@gmail.com</p>
-              <p><span> place : </span> berhampur, India - 76008</p>
+              <p><span> place : </span> Berhampur,Odisha,India - 76008</p>
             </div>
         </div>
         
@@ -264,7 +263,7 @@
         </div>
         <div class="content">
         <h3>Bachelor of computer Science and engineering</h3>
-        <p>Institute of Technical Education and Research,Soa University |ITER </p>
+        <p>Institute of Technical Education and Research,SOA Deemed To Be University |ITER </p>
         <h4>2020-2024 | Pursuing</h4>
         </div>
     </div>
@@ -275,7 +274,7 @@
       </div>
       <div class="content">
       <h3>HSC Science | Information technology</h3>
-      <p> Saraswati vidya mandir,n.k.nagar| CHSE</p>
+      <p> Saraswati Vidya Mandir,N.K.Nagar| CHSE</p>
       <h4>2018-2020 | Completed</h4>
       </div>
     </div>
